tests/out/error/redef/mixed.out
error: redfinition of "Mixed"
tests/out/error/redef/mixed.in.bt:1:0 conflict: struct
tests/out/error/redef/mixed.in.bt:3:0 conflict: enum
tests/out/error/redef/mixed.in.bt:7:0 conflict: struct
tests/out/error/redef/mixed.in.bt:9:0 conflict: type
tests/out/error/redef/mixed.in.bt:11:0 conflict: interface
